@@ -1,0 +1,15 @@
+# croix_3D_VEF_lam_FPX.son
+# Temps x= 1.00000000e+00 y= -1.33333340e-01 z= -1.33333340e-01
+# Champ FPX [??]
+# Type NUMERO_ELEM_SUR_MAITRE
+0.00000000e+00 -9.15600407e-06
+1.60375030e-14 -9.15600407e-06
+3.20750060e-14 -9.15600408e-06
+4.81125090e-14 -9.15600409e-06
+6.41500119e-14 -9.15600410e-06
+8.01875149e-14 -9.15600410e-06
+9.62250179e-14 -9.15600411e-06
+1.12262521e-13 -9.15600412e-06
+1.28300024e-13 -9.15600413e-06
+1.44337527e-13 -9.15600414e-06
+1.60375030e-13 -9.15600415e-06
